# HunterInfo

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py
hunter/: __init__.py  config.py  local_hunter.py  util.py
