# setup.cfg；所有条目见 https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name = hunter
version = 1.0
author = thinksec
author_email = think_sec@163.com
long_description = file: README.md # 从文件中读取
url = https://github.com/thinksec/HunterInfo

[options]
packages = find:

install_requires =
    rich

[options.entry_points]
console_scripts =
    hunter-info = hunter.local_hunter:main